Update and rename 2.html to index.html

--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
             }
         }
     </style>
-    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-    <script>LA.init({id:"3LR3xngb0a5ct7aF"})</script>
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3LSJn75OdmKyy7Kz",ck:"3LSJn75OdmKyy7Kz"})</script>
 </head>
 <body>
     <!-- 导航栏 -->
@@ -325,8 +325,8 @@
         <div class="logo">网易云音乐优化版</div>
         <div class="nav-links">
             <a href="#features" class="nav-link">版本特性</a>
-            <a href="https://pan.baidu.com/s/xxxx" class="nav-link">下载安装包</a>
-            <a href="#download" class="download-btn">
+            <a href="https://pan.quark.cn/s/52fcd8cd1f71" class="nav-link">下载安装包</a>
+            <a href="https://pan.quark.cn/s/52fcd8cd1f71" class="download-btn">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M12 2v16m0 0l4-4m-4 4l-4-4m6 8H6"/>
                 </svg>
@@ -339,7 +339,7 @@
     <section class="hero">
         <h1>解锁完整音乐宇宙</h1>
         <p>内置杜比大喇叭β模块 | 解锁本地黑胶会员 | 支持无损音质下载</p>
-        <a href="https://pan.baidu.com/s/xxxx" class="download-btn">
+        <a href="https://pan.quark.cn/s/52fcd8cd1f71" class="download-btn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M12 2v16m0 0l4-4m-4 4l-4-4m6 8H6"/>
             </svg>
@@ -395,9 +395,10 @@
 
     <footer style="background: var(--dark); color: white; padding: 2rem; text-align: center;">
         <div style="margin-top: 0rem;">
-            <p style="color: #ff5555;">※ 本版本为技术适配版，支持正版请前往官方渠道下载 ※</p>
-            <p>音乐内容来自网易云音乐服务器，部分功能依赖网络环境实现</p>
-            <p>适配安卓4.4-11系统（不兼容安卓12+），长期使用建议购买正版会员</p>
+            <div style="margin-bottom: 1rem;">
+                <a href="https://pan.quark.cn/s/89acf482fd64" style="margin: 0 1rem;">软件合集</a>
+                <a href="https://pan.quark.cn/s/daa0a68d49cf">游戏合集</a>
+            </div>
         </div>
     </footer>
 </body>
