--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <body>
     <!-- 导航栏 -->
     <nav class="navbar">
-        <div class="logo">网易云音乐优化版</div>
+        <div class="logo">网易云音乐v9.1.40解锁会员版</div>
         <div class="nav-links">
             <a href="#features" class="nav-link">版本特性</a>
             <a href="https://pan.quark.cn/s/52fcd8cd1f71" class="nav-link">下载安装包</a>
